docs/tests/parser/structs/invalid/RegularStructInvalidOperator.b
struct StructTest {
    operator =(StructTest a, StructTest b) { }
    operator +=(StructTest a, StructTest b) { }
    operator -=(StructTest a, StructTest b) { }
    operator *=(StructTest a, StructTest b) { }
    operator /=(StructTest a, StructTest b) { }
    operator %=(StructTest a, StructTest b) { }
    operator <<=(StructTest a, StructTest b) { }
    operator >>=(StructTest a, StructTest b) { }
    operator &=(StructTest a, StructTest b) { }
    operator ^=(StructTest a, StructTest b) { }
    operator |=(StructTest a, StructTest b) { }
    operator ~=(StructTest a, StructTest b) { }
    operator &&=(StructTest a, StructTest b) { }
    operator ||=(StructTest a, StructTest b) { }
    operator <-(StructTest a, StructTest b) { }
}
